<?xml version="1.0"?>
<package format="3">
  <name>jaka_description</name>
  <version>0.0.0</version>
  <description>The jaka_description package</description>
  <maintainer email="1576055173@qq.com">wawatt</maintainer>
  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>