<?xml version="1.0"?>
<package format="3">
  <name>jaka_driver</name>
  <version>0.0.0</version>
  <description>The jaka_driver package</description>
  <maintainer email="1576055173@qq.com">wawatt</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>jaka_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
