<?xml version="1.0"?>
<package format="3">
  <name>jaka_msgs</name>
  <version>0.0.0</version>
  <description>The jaka_msgs package</description>
  <maintainer email="1576055173@qq.com">gaojia</maintainer>
  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
