<?xml version="1.0"?>
<package format="3">
  <name>jaka_planner</name>
  <version>0.0.0</version>
  <description>The jaka_planner package</description>
  <maintainer email="1576055173@qq.com">wawatt</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jaka_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
